Refactor: .collect(Collectors.toList()); changed to .toList();